0.0.3 : 2013-03-24
 - New types extension (o-types.js).

0.0.2 : 2013-03-18
 - Added o.construct.
 - o.extend now accepts a third argument to specify properties for the prototype.
 - Full test coverage of the Core API.
 - Fixed around to handle return values.
 - Fixed o.extend to properly inherit the parent's prototype
   instead of merging it with the child's.
 - Default isa to "object" if extends is set.

0.0.1 : 2013-03-10
 - First release!
